--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,8 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:8080",
+            "name": "GCSE Psychology Paper 1 Revision",
+            "url": "https://dalekvim.github.io/GCSE-Psychology-Paper-1-Revision/",
             "webRoot": "${workspaceFolder}"
         }
     ]
